<resources>
    <string name="app_name">SVW e-Sales</string>
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_notice">Notification</string>
    <string name="menu_recommend">essence</string>
    <string name="menu_hot">vote</string>
    <string name="menu_newest">recent</string>
    <string name="menu_jobs">cool work</string>
    <string name="menu_wiki">Community WIKI</string>
    <string name="menu_nobody">no response</string>
    <string name="menu_vote">favorite topics</string>
    <string name="menu_topic">share topics</string>
    <string name="menu_revert">response</string>
    <string name="menu_change_theme">change topics</string>
    <string name="menu_login_help">login help</string>
    <string name="dialog_exit_login">Are you sure to exit?</string>
    <string name="dialog_exit_negative_text">Let me see.</string>
    <string name="dialog_exit_positive_text">Bye bye</string>
    <string name="empty_data_home">no reseveration today</string>
    <string name="empty_data_traffic">"no visitors' information"</string>
    <string name="empty_data_yellow_card">no opportunity information</string>
    <string name="empty_data_task_traffic">no visitors task today</string>
    <string name="empty_data_task_e_commerce">no e-commerce task today</string>
    <string name="empty_data_task_follow">no task to follow today</string>
    <string name="empty_data_schedule_wait">no waiting schedule today</string>
    <string name="empty_data_schedule_complete">no completed chedule today</string>
    <string name="empty_data_approve_wait">no waiting approval today</string>
    <string name="empty_data_approve_complete">no completed approval today</string>
    <string name="empty_data_notification">no notification</string>
    <string name="empty_order_customer">no order customer</string>
    <string name="empty_deal_customer">no deal customer</string>
    <string name="empty_sleep_customer">no sleeping customer</string>
    <string name="empty_failed_customer">no failed customer</string>
    <string name="empty_optional_package">no optional package</string>
    <string name="empty_data">no data</string>
    <string name="no_more_data">no more data</string>
    <string name="all_is_load">all is done</string>
    <string name="network_error">network error</string>
    <string name="server_error">server error</string>
    <string name="timeout_error">timeout error</string>
    <string name="token_error">token error</string>
    <string name="pending_status">pending status</string>
    <string name="main_index_page">Homepage</string>
    <string name="main_resource">Resources</string>
    <string name="main_kpi">Reports</string>
    <string name="main_mine">mine</string>
    <string name="home_schedule_item">Appointments</string>
    <string name="home_today_indicator">today indicator</string>
    <string name="home_schedule_finish">schedule finished</string>
    <string name="home_schedule_check_yellow_card">check yellow card</string>
    <string name="home_header_e_commerce">e-commerce</string>
    <string name="home_header_approve">approve</string>
    <string name="home_header_traffic">Traffic</string>
    <string name="home_header_follow_up">Follow-ups</string>
    <string name="home_create_traffic_title">create traffic title</string>
    <string name="home_create_traffic_source_type">create traffic source type</string>
    <string name="home_create_traffic_media">media</string>
    <string name="home_create_traffic_source_type_hint">create traffic source type hint</string>
    <string name="home_create_traffic_media_hint">select media</string>
    <string name="home_create_traffic_info">Customer info</string>
    <string name="home_create_traffic_info_name">Name</string>
    <string name="home_create_traffic_info_gender">Gender</string>
    <string name="home_create_traffic_info_phone">Mobile</string>
    <string name="home_create_traffic_info_activity">activity</string>
    <string name="home_create_traffic_info_select_activity">select activity</string>
    <string name="home_create_traffic_get_activity_time_out">activity timeout</string>
    <string name="home_create_traffic_info_is_friend">recommended by friends</string>
    <string name="home_create_traffic_info_rec_name">"recommender's name"</string>
    <string name="home_create_traffic_info_rec_mobile">"recommender's mobile"</string>
    <string name="home_create_traffic_info_desc">remarks</string>
    <string name="home_create_traffic_info_male">Male</string>
    <string name="home_create_traffic_info_female">Female</string>
    <string name="home_create_traffic_info_name_hint">Please fill in the customer name</string>
    <string name="home_create_traffic_info_gender_hint">Please select the gender</string>
    <string name="home_create_traffic_info_phone_hint">Please fill in the mobile number</string>
    <string name="home_create_traffic_info_rec_nome_hint">Please fill in existing SVW-owners name</string>
    <string name="home_create_traffic_info_rec_mobile_hint">please fill in mobile</string>
    <string name="home_create_traffic_success">Traffic created successfully</string>
    <string name="home_create_traffic_fail">Request failed</string>
    <string name="home_create_traffic_timeout">Timeout</string>
    <string name="home_create_traffic_desc_hint">Input description</string>
    <string name="home_create_traffic_name_empty_tip">Please fill in the name</string>
    <string name="home_create_traffic_phone_empty_tip">Please fill in the mobile </string>
    <string name="home_create_traffic_phone_error_tip">Please fill in the correct mobile</string>
    <string name="home_create_traffic_gender_empty_tip">Please select the gender</string>
    <string name="home_create_traffic_remark_empty_tip">Please fill in description</string>
    <string name="home_create_traffic_rec_name_empty_tip">Please fill in existing SVW-owners name</string>
    <string name="home_create_traffic_rec_mobile_empty_tip">Please fill in the name</string>
    <string name="home_create_traffic_rec_mobile_error_tip">Please fill in the correct mobile</string>
    <string name="home_create_traffic_rec_car_empty_tip">please fill in car model code</string>
    <string name="home_create_traffic_rec_car_error_tip">please fill in correct car model code</string>
    <string name="home_create_traffic_rec_car_series_empty_tip">please fill in car series code</string>
    <string name="home_create_traffic_check_repeat">check</string>
    <string name="home_create_traffic_check_repeat_failed">ckeck repeat failed</string>
    <string name="home_create_traffic_check_repeat_time_out">check repeat time out</string>
    <string name="home_create_traffic_check_repeat_no_repeat">no repeat</string>
    <string name="home_create_traffic_check_repeat_tip_1">there are </string>
    <string name="home_create_traffic_check_repeat_tip_2">repeating records</string>
    <string name="home_delay_tip_one">You have </string>
    <string name="home_delay_tip_two">overdue recrds</string>
    <string name="home_auto_play_due_date">up to now</string>
    <string name="home_auto_play_rate">completion rete</string>
    <string name="home_auto_play_month_deal">deals done</string>
    <string name="home_auto_play_new_order">new order</string>
    <string name="home_auto_play_drive">drive</string>
    <string name="home_auto_play_new_cus">new customer</string>
    <string name="home_auto_play_order_done">orders done</string>
    <string name="home_auto_play_cus_transfer">opportunity transfered</string>
    <string name="to_deal_leads_title">Leads pending follow up</string>
    <string name="pull_down_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="resource_tab_yellow_card">Opportunities</string>
    <string name="resource_tab_traffic">Traffic</string>
    <string name="resource_tab_failed">failed customers</string>
    <string name="resource_tab_sleep">sleeping customers</string>
    <string name="resource_select_filter_cancel">Cancel</string>
    <string name="resource_select_filter_confirm">Confirm</string>
    <string name="resource_select_filter_reset">Reset</string>
    <string name="task_tab_schedule_item_empty">no schedule</string>
    <string name="traffic_back_view_create_card">New</string>
    <string name="traffic_back_view_follow">Follow-up</string>
    <string name="traffic_back_view_can_not_create_card">Invalid</string>
    <string name="traffic_back_view_check">View</string>
    <string name="can_not_create_reason">Reason for invalid</string>
    <string name="can_not_create_no_info">No information</string>
    <string name="can_not_create_no_info_detail">No valid contact information from the customer</string>
    <string name="can_not_create_after_sale">After-sales inquiry</string>
    <string name="can_not_create_after_sale_detail">After-sales inquiry only</string>
    <string name="can_not_create_no_buy">Not a potential buyer</string>
    <string name="can_not_create_no_buy_detail">Customer is not a potential buyer</string>
    <string name="can_not_create_dialog_post">Submit</string>
    <string name="can_not_create_post_success">Status updated successfully</string>
    <string name="can_not_create_post_fail">Fail to update status</string>
    <string name="can_not_create_no_select_tip">Please select the reasons</string>
    <string name="traffic_check_existed_yc_fail">Unable to get the card information</string>
    <string name="traffic_get_yellow_card_info_fail">Unable to get the card information</string>
    <string name="yellow_back_view_vip">VIP customer</string>
    <string name="yellow_back_view_follow">Follow-up</string>
    <string name="new_customer_mandatory">*</string>
    <string name="new_customer_name">Name</string>
    <string name="new_customer_name_hint">Please fill in name</string>
    <string name="new_customer_gender">Gender</string>
    <string name="new_customer_gender_male">Male</string>
    <string name="new_customer_gender_female">Female</string>
    <string name="new_customer_mobile">Telephone</string>
    <string name="new_customer_mobile_hint">Mobile</string>
    <string name="new_customer_age">Age</string>
    <string name="new_customer_age_hint">Please select age</string>
    <string name="new_customer_source">Sources</string>
    <string name="new_customer_source_hint">Please select sources</string>
    <string name="new_customer_media">Media</string>
    <string name="new_customer_media_hint">Please select media</string>
    <string name="new_customer_recommended_by_friend">recommended by friends?</string>
    <string name="new_customer_jipan_customer">"referer's name"</string>
    <string name="new_customer_jipan_customer_hint">"please fill in referer's name"</string>
    <string name="new_customer_jipan_customer_contact">"referer's contact"</string>
    <string name="new_customer_jipan_customer_contact_hint">"please fill in referer's contact"</string>
    <string name="new_customer_next_followup_date">Next follow-up plan</string>
    <string name="new_customer_next_followup_date_hint">Please select</string>
    <string name="new_customer_next_followup_contact_plan">Follow-up plan</string>
    <string name="new_customer_next_followup_contact_method">Follow-up method</string>
    <string name="new_customer_next_followup_contact_method_plan">Please select follow-up method</string>
    <string name="new_customer_appointment_date">Date</string>
    <string name="new_customer_appointment_date_hint">Please select appointment date</string>
    <string name="new_customer_appointment_time">Time</string>
    <string name="new_customer_appointment_time_hint">Please select appointment time</string>
    <string name="new_customer_appointment_type">Appointment</string>
    <string name="new_customer_appointment_type_hint">Please select</string>
</resources>