<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_actionbar_search_white"
        app:showAsAction="always"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_notice"
        android:icon="@mipmap/ic_print_error"
        app:showAsAction="always"
        android:title="@string/action_notice" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
