<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/new_yellow_card_info_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:stretchColumns="2">

        <TableRow android:gravity="center_vertical">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="@string/new_customer_mandatory"
                android:textColor="#EA4F44" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_name" />

            <RelativeLayout android:layout_column="2">

                <EditText
                    android:id="@+id/new_yellow_card_info_name_et"
                    style="@style/NewCardRightTextStyle.EditText"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/new_customer_row_height"
                    android:layout_alignParentRight="true"
                    android:hint="@string/new_customer_name_hint" />
            </RelativeLayout>

            <!--撑起宽和高-->
            <View
                android:layout_width="@dimen/custom_item_layout_right_padding"
                android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow
            android:id="@+id/new_yellow_card_info_gender_tr"
            android:gravity="center_vertical">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="@string/new_customer_mandatory"
                android:textColor="#EA4F44" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_gender" />

            <RadioGroup
                android:id="@+id/new_customer_step_1_gender_rg"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/new_customer_step_1_gender_male_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:drawableLeft="@drawable/new_customer_radio_button_selector"
                    android:drawablePadding="10dp"
                    android:text="@string/new_customer_gender_male" />

                <RadioButton
                    android:id="@+id/new_customer_step_1_gender_female_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/new_customer_radio_button_selector"
                    android:drawablePadding="10dp"
                    android:text="@string/new_customer_gender_female" />
            </RadioGroup>

            <!--<TextView-->
            <!--android:id="@+id/new_yellow_card_info_gender_tv"-->
            <!--style="@style/NewCardRightTextStyle.TextView"-->
            <!--android:layout_column="2"-->
            <!--android:text="请选择性别" />-->

            <View android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow android:gravity="center_vertical">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="@string/new_customer_mandatory"
                android:textColor="#EA4F44" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_mobile" />

            <RelativeLayout android:layout_column="2">

                <EditText
                    android:id="@+id/new_customer_step_1_info_phone_et"
                    style="@style/NewCardRightTextStyle.EditText"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/new_customer_row_height"
                    android:layout_alignParentRight="true"
                    android:hint="@string/new_customer_mobile_hint"
                    android:inputType="phone"
                    android:maxLength="11" />
            </RelativeLayout>

            <View android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow
            android:id="@+id/new_yellow_card_info_age_tr"
            android:gravity="center_vertical">

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_age" />

            <TextView
                android:id="@+id/new_yellow_card_info_age_tv"
                style="@style/NewCardRightTextStyle.TextView"
                android:layout_column="2"
                android:hint="@string/new_customer_age_hint" />

            <View android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow
            android:id="@+id/new_yellow_card_info_source_tr"
            android:gravity="center_vertical">

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_source" />

            <TextView
                android:id="@+id/new_yellow_card_info_source_tv"
                style="@style/NewCardRightTextStyle.TextView"
                android:layout_column="2"
                android:drawableRight="@null"
                android:hint="@string/new_customer_source_hint" />

            <View android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow
            android:id="@+id/new_yellow_card_info_media_tr"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_media" />

            <TextView
                android:id="@+id/new_yellow_card_info_media_tv"
                style="@style/NewCardRightTextStyle.TextView"
                android:layout_column="2"
                android:drawableRight="@null"
                android:hint="@string/new_customer_media_hint" />

            <View android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:id="@+id/new_yellow_card_info_media_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line"
            android:visibility="gone" />

        <com.svw.dealerapp.ui.widget.CustomItemViewForOptionsPicker
            android:id="@+id/new_customer_step_1_activity_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TableRow
            android:id="@+id/new_customer_step_1_recommend_by_friend_tr"
            android:gravity="center_vertical">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="*"
                android:textColor="#EA4F44"
                android:visibility="invisible" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_recommended_by_friend" />

            <CheckBox
                android:id="@+id/new_customer_step_1_recommend_by_friend_cb"
                style="@style/NewCardRightTextStyle"
                android:layout_column="2"
                android:background="@drawable/common_switch_selector"
                android:button="@null" />

            <View android:layout_height="48dp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line" />

        <TableRow
            android:id="@+id/new_customer_recommended_name_tr"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="@string/new_customer_mandatory"
                android:textColor="#EA4F44" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_jipan_customer" />

            <RelativeLayout android:layout_column="2">

                <EditText
                    android:id="@+id/new_customer_jipan_name_et"
                    style="@style/NewCardRightTextStyle.EditText"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/new_customer_row_height"
                    android:layout_alignParentRight="true"
                    android:hint="@string/new_customer_jipan_customer_hint" />
            </RelativeLayout>

            <!--撑起宽和高-->
            <View
                android:layout_width="@dimen/custom_item_layout_right_padding"
                android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:id="@+id/new_customer_recommended_name_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line"
            android:visibility="gone" />

        <TableRow
            android:id="@+id/new_customer_recommended_mobile_tr"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_column="0"
                android:layout_marginLeft="@dimen/custom_item_star_left_margin"
                android:layout_marginRight="@dimen/custom_item_star_right_margin"
                android:text="@string/new_customer_mandatory"
                android:textColor="#EA4F44" />

            <TextView
                android:layout_column="1"
                android:text="@string/new_customer_jipan_customer_contact" />

            <RelativeLayout android:layout_column="2">

                <EditText
                    android:id="@+id/new_customer_jipan_customer_mobile_et"
                    style="@style/NewCardRightTextStyle.EditText"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/new_customer_row_height"
                    android:layout_alignParentRight="true"
                    android:hint="@string/new_customer_jipan_customer_contact_hint"
                    android:inputType="number"
                    android:maxLength="11" />
            </RelativeLayout>

            <!--撑起宽和高-->
            <View
                android:layout_width="@dimen/custom_item_layout_right_padding"
                android:layout_height="@dimen/new_customer_row_height" />
        </TableRow>

        <View
            android:id="@+id/new_customer_recommended_mobile_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:background="@color/new_yellow_card_divide_line"
            android:visibility="gone" />

        <com.svw.dealerapp.ui.widget.CustomItemViewForEditText
            android:id="@+id/new_customer_code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableLayout>

    <com.svw.dealerapp.ui.widget.InterceptTouchCoverView
        android:id="@+id/itv_cover_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>